# tz

./: .gitignore  CMakeLists.txt  README.md  asyncfile.cpp  asyncfile.h  cmdopts.h  filegenerator_main.cpp  sorter.cpp  sorter.h  sorter_main.cpp  test.sh
filegenereator/: CMakeLists.txt  cmdopts.h  main.cpp
sorter/: CMakeLists.txt  main.cpp  sorter.cpp  sorter.h
